--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <p>
     denna websida tillhör Albin
 </p>
-<a href="http://https://albinahlin.github.io/"></a>
+<a href="http://albinahlin.github.io/"></a>
+<img src="c:\Users\alah1106\OneDrive - Sala kommun\Bilder\r9.webp" alt="r9">
