--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <p>
     denna websida tillhör Albin
 </p>
-<a href="http://albinahlin.github.io/"></a>
-<img src="c:\Users\alah1106\OneDrive - Sala kommun\Bilder\r9.webp" alt="r9">
+<img src="r9.webp.gif" alt="r9">
