--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>
-    denna websida tillhör Albin
-</p>
-<img src="r9.webp.gif" alt="r9">
+<H1>
+  <B>DET HÄR ÄR VÄRLDENS BÄSTA WEBSIDA</B>  
+</H1>
+>
