--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <H1>
   <B>DET HÄR ÄR VÄRLDENS  BÄSTA WEBSIDA</B>  
 </H1> 
-<body style="background: url(https://images.app.goo.gl/NZoK3Ra2VwZzxK5aA);">
+<body style="background-color: wheat;">
     
 </body>
 
