--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<H1>
-  <B>DET HÄR ÄR VÄRLDENS  BÄSTA WEBSIDA</B>  
-</H1> 
+<div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;"><H1>
+    <B>DET HÄR ÄR VÄRLDENS  BÄSTA WEBSIDA</B>  
+  </H1> </div>
 <body style="background-color: wheat;">
     
 </body>
