--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   </H1> </div>
 <body style="background-color: wheat;">
     <hr color="black" width="70%">
+    <br> <p> 15x Cl <br> 6x Sc <br> 5x Cwc <br> 36x Laliga <br> 20x Cdl</p>
 </body>
 
 
