--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <div style="width: 100%; height: 20%; display: flex; align-items: center; justify-content: center;"><H1>
     <B>DET HÄR ÄR VÄRLDENS  BÄSTA WEBSIDA</B>  
   </H1> </div>
 <body style="background-color: wheat;">
     <hr color="black" width="70%">
-    <br> <p style="align-content: center;"> 15x Cl <br> 6x Sc <br> 5x Cwc <br> 36x Laliga <br> 20x Cdl</p>
+    <br> <p style="width: 40%;"> 15x Cl <br> 6x Sc <br> 5x Cwc <br> 36x Laliga <br> 20x Cdl</p>
 </body>
 
 
