--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   </H1> </div>
 <body style="background-color: wheat;">
     <hr color="black" width="70%">
-    <br> <p style="width: 40%;"> 15x Cl <br> 6x Sc <br> 5x Cwc <br> 36x Laliga <br> 20x Cdl</p>
+ 
 </body>
-
-
+<img src="https://www.soccerlord.se/product/retro-manchester-united-home-football-shirt-06-07/" alt="machester united">
 
