--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<div style="width: 100%; height: 20%; display: flex; align-items: center; justify-content: center;"><H1>
-    <B>DET HÄR ÄR VÄRLDENS  BÄSTA WEBSIDA</B>  
-  </H1> </div>
+<p>
+    denna websida tillhör <br> Albin
+</p>
 <body style="background-color: wheat;">
-    <hr color="black" width="70%">
- 
+<img src="r9.webp" alt="r9">   
 </body>
-<img src="https://www.soccerlord.se/product/retro-manchester-united-home-football-shirt-06-07/" alt="machester united">
-
