--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<p>
-    denna websida tillhör <br> Albin
-</p>
+<!DOCTYPE html>
+<h1>
+    det här är <mark> världens </mark> bästa websida
+</h1>
 <body style="background-color: wheat;">
 <img src="r9.webp" alt="r9">   
 </body>
