--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     det här är <mark> världens </mark> bästa websida
 </h1>
 <body style="background-color: wheat;">
-<img src="r9.webp" alt="r9" width="200" height="300">   
+ <center><img src="r9.webp" alt="r9" width="200" height="300"></center>   
 </body>
+
