green r9 size yeah

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1>
     det här är <mark> världens </mark> bästa websida
 </h1>
-<body style="background-color: wheat;">
- <center><img src="r9.webp" alt="r9" width="200" height="300"></center>   
+<body style="background-color: rgb(10, 203, 33);">
+ <center><img src="r9.webp" alt="r9" width="200" height="250"></center>   
 </body>
 
