--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<h1>
-    det här är <mark> världens </mark> bästa websida
-</h1>
-<body style="background-color: rgb(10, 203, 33);">
- <center><img src="r9.webp" alt="r9" width="200" height="250"></center>   
+<center> <h1> det här är <mark> världens </mark> bästa websida
+</h1></center>
+   
+
+<body style="background-color: rgb(232, 48, 162);">
+ <center><img src="r9.webp" alt="r9" width="200" height="250"></center>
+ <h2>&#128511;</h2>
+
 </body>
 
