--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
    <body style="background-color: rgb(232, 48, 162);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center>
  <h2>&#128511;</h2>
- <button type="button">tryck på mig!</button>
- <button type="button" onclick="alert('Tack för att du besöker världens bästa websida!')">Click Me!</button>
+
+ <button type="button" class="btn btn-danger">Danger</button> onclick="alert('Tack för att du besöker världens bästa websida!')">tryck på mig!</button>
 
 </body>
 
