--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center>
  <h2>&#128511;</h2>
 
- <button type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button>
+ <center><button type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
+ 
 
 
 </body>
