mmmm gul websida

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<center> <h1> det här är <mark> världens </mark> bästa websida
+<center> <h1> det här är <mark> världens </mark> bästa websida <hr>
 </h1></center>
-   <body style="background-color: rgb(232, 48, 162);">
+   <body style="background-color: rgb(255, 244, 40);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center>
- <h2>&#128511;</h2>
-
  <center><button type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  
 
