--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <center> <h1> det här är <mark> världens </mark> bästa websida <hr>
 </h1></center>
    <body style="background-color: rgb(255, 244, 40);">
- <center><img src="r9.webp" alt="r9" width="200" height="250"></center>
- <p style="color: green;"> Den här websidan är en ägodel till Albin Ahlin. <br> Denna sida har kronats till den officiellt bästa websidan i världens historia. </p>
+ <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr>
+ <p style="color: green;"> Den här websidan är en ägodel till Albin Ahlin. <br> Denna sida har kronats till den officiellt bästa websidan i världens historia. <br> Organisationer som yhar listat hemsidan som ledande i framgång innefattar <br> guiness world records, BBC och WORLD NEWS </p>
  <center><button type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  
 
