test hr linje widtht

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<center> <h1> det här är <mark> världens </mark> bästa websida <hr>
+<center> <h1> det här är <mark> världens </mark> bästa websida <hr style="width:200px;%;">
 </h1></center>
    <body style="background-color: rgb(255, 244, 40);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr>
- <p style="color: green;"> Den här websidan är en ägodel till Albin Ahlin. <br> Denna sida har kronats till den officiellt bästa websidan i världens historia. <br> Organisationer som yhar listat hemsidan som ledande i framgång innefattar <br> guiness world records, BBC och WORLD NEWS </p>
+ <p style="color: green;"> Den här websidan är en ägodel till Albin Ahlin. <br> Denna sida har kronats till den officiellt bästa websidan i världens historia. <br> Organisationer som har listat hemsidan som ledande i framgång innefattar <br> guiness world records, BBC och WORLD NEWS </p>
  <center><button type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  
 
