--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<center> <h1> det här är <mark> världens </mark> bästa websida <hr size="200">
+<center> <h1> det här är <mark> världens </mark> bästa websida <hr>
 </h1></center>
    <body style="background-color: rgb(255, 244, 40);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr>
