--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <body style="background-color: rgb(255, 244, 40);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr>
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
- <p style="color: green;"> Den här websidan är en ägodel till Albin Ahlin. <br> Denna sida har kronats till den officiellt bästa websidan i världens historia. <br> Organisationer som har listat hemsidan som ledande i framgång innefattar <br> guiness world records, BBC och WORLD NEWS </p>
+ <p style="color: green;"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr>
- 
+
 
 
 </body>
