--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <center> <h1> det här är <mark> världens </mark> bästa websida <hr>
 </h1></center>
-   <body style="background-color: rgb(255, 244, 40);">
+   <body style="background-color: rgb(13, 100, 1);">
  <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr>
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
- <p style="color: green;"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
+ <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr>
 
 
