--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
+ <p><a href="andrasidan.html"> Andrasidan</a></p>
 
 
 
