--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,4 +1,4 @@
-<h1 style="color: blue;"> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1>
+<center><h1 style="color: blue; height: 350;"> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1></center>
 <body style="background-color: yellow;">
     
 </body>
