ronald 2.0 test pos

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <center> <h1 style="color: yellow;"> det här är världens bästa websida <hr style="color: yellow;">
 </h1></center>
    <body style="background-color: rgb(13, 100, 1);">
-    <img src="ronaldo.png" alt="ronaldooo width="200" height="250" >
- <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
+    <img src="ronaldo.png" alt="ronaldooo width="200" height="250" ><center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
 
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
