--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,4 +1,4 @@
 <center><h1 style="color: blue; "> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1></center>
 <body style="background-color: yellow;">
-    <audio src="button noise.mp3" autoplay></audio>
+    <audio src="button noise.mp3" autoplay loop></audio>
 </body>
