--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <center> <h1 style="color: yellow;"> det här är världens bästa websida <hr style="color: yellow;">
 </h1></center>
+<audio src="metall.mp3"type=audio/ogg></audio>
    <body style="background-color: rgb(13, 100, 1);">
 <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
-<audio src="metall.mp3" autoplay></audio>
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
