--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,4 +1,9 @@
 <center><h1 style="color: blue; "> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1></center>
 <body style="background-color: yellow;">
     <audio src="button noise.mp3" autoplay loop></audio>
+    <h3> anledningar till att denna sida är näst bästi hela världen</h3>
+    <ul>
+        <li>den är cool</li>
+        <li>den är bra</li>
+    </ul>
 </body>
