--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,7 +1,7 @@
 <center><h1 style="color: blue; "> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1></center>
 <body style="background-color: yellow;">
-    <audio src="button noise.mp3" autoplay loop></audio>
-    <h3> anledningar till att denna sida är näst bästi hela världen</h3>
+    <audio src="metall.mp3" autoplay></audio>
+    <h3> anledningar till att denna sida är näst bäst i hela världen</h3>
     <ul>
         <li>den är cool</li>
         <li>den är bra</li>
