--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,9 +1,5 @@
-<center><h1 style="color: blue; "> DET HÄR ÄR VÄRLDENS NÄST BÄSTA WEBSIDA</h1></center>
-<body style="background-color: yellow;">
+<center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR</h1></center>
+<body style="background-color: rgb(0, 0, 0);">
     <audio src="metall.mp3" autoplay></audio>
-    <h3> anledningar till att denna sida är näst bäst i hela världen</h3>
-    <ul>
-        <li>den är cool</li>
-        <li>den är bra</li>
-    </ul>
+  <center> <p style="background-color: gray;"> Den här websidan inehåller en hel del av roliga aktiviteter <br> som kommer att underhålla dig. Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på AlbAhl LLC så önskar vi er att föja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
 </body>
