--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,5 +1,5 @@
-<center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR</h1></center>
+<center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR!</h1></center>
 <body style="background-color: rgb(0, 0, 0);">
     <audio src="metall.mp3" autoplay></audio>
-  <center> <p style="background-color: gray;"> Den här websidan inehåller en hel del av roliga aktiviteter <br> som kommer att underhålla dig. Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på AlbAhl LLC så önskar vi er att föja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
+  <center> <p style="background-color: gray; font-weight: bolder;" > Den här websidan inehåller en hel del av roliga aktiviteter som kommer att underhålla dig. <br> Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på Albin LLC så önskar vi er att nöja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
 </body>
