--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <center> <h1 style="color: yellow;"> det här är världens bästa websida <hr style="color: yellow;">
 </h1></center>
 
-   <body style="background-color: rgb(13, 100, 1);">
+   <body style="background-color: rgb(0, 0, 0);">
 <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
  <center><button style="color: red;" type="button" onclick="alert('tack för att du besöker världens bästa websida!')">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
- <p><a href="andrasidan.html"> Andrasidan</a></p>
+ <p><a href="andrasidan.html" style="font-size: x-large;"> Gå till andrasidan här!</a></p>
 
 
 
