--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 </h1></center>
 
    <body style="background-color: rgb(0, 0, 0);">
-<center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
- <center><button style=" background-color: red rgb(242, 242, 242);"  type="button" onclick="alert('tack för att du besöker världens bästa websida!') ">tryck på mig!</button></center>
+<center><img src="r9.webp" alt="r9" width="200" height="250" id="R9"></center> <hr style="color: yellow;">
+ <center><button onclick="" style="background-color: red; color: aliceblue;">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
  <p><a href="andrasidan.html" style="font-size: x-large;"> Gå till andrasidan här!</a></p>
 
+<script>
+   function knappgrej(){
+document.getElementById("R9").innerHTML = "Nu är den borta!"
+   }
 
+</script>
 
 </body>
 
