--- a/andrasidan.html
+++ b/andrasidan.html
@@ -2,7 +2,20 @@
 <body style="background-color: rgb(0, 0, 0);">
     <audio src="metall.mp3" autoplay></audio>
   <center> <p style="background-color: gray; font-weight: bolder;" > Den här websidan inehåller en hel del av roliga aktiviteter som kommer att underhålla dig. <br> Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på Albin LLC så önskar vi er att nöja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
-<img src="party_blob.gif" alt="blobben bob" style="position: relative; right:30px;">
-<img src="party_blob.gif" alt="blobben bob" style="position: relative; left:30px;">
 <img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+<img src="party_blob.gif" alt="blobben bob">
+
+
+
 </body>
