--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
    <body style="background-color: rgb(0, 0, 0);">
 <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
- 
+ <center> <button style="padding: 70%; background-color: yellow; "> Tryck på mig</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
  <p><a href="andrasidan.html" style="font-size: x-large;"> Gå till andrasidan här!</a></p>
