--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,4 +1,4 @@
-<center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR!</h1></center>
+<center><h1 style="color: rgb(255, 255, 255); " class="animate_animated animate_heartBeat animate_infinite"> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR!</h1></center>
 <body style="background-color: rgb(0, 0, 0);">
     <audio src="metall.mp3" autoplay></audio>
   <center> <p style="background-color: gray; font-weight: bolder;" > Den här websidan inehåller en hel del av roliga aktiviteter som kommer att underhålla dig. <br> Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på Albin LLC så önskar vi er att nöja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
@@ -11,7 +11,7 @@
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
-<iframe src="https://unknow-since.github.io/" height="400" width="300" title="Theodors websida"></iframe>
+<iframe src="https://unknow-since.github.io/" height="500" width="500" title="Theodors websida"></iframe>
 
 
 
