--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
    <body style="background-color: rgb(0, 0, 0);">
 <center><img src="r9.webp" alt="r9" width="200" height="250"></center> <hr style="color: yellow;">
- <center> <button  type="button" background-color: yellow; color: black; onclick="alert (tack för att du besöker den bästa websidan i hela världen)"> Tryck på mig</button></center>
+ <center> <button type="button" onclick="alert('hallå där!')" style="border: 5px; background-color: yellow;">tryck på mig!</button></center>
  <p style="color: rgb(201, 227, 30);"> Detta är den första av många framgångsrika websidor <br> av Albin Ahlin </p>
  <hr style="color: yellow;">
  <p><a href="andrasidan.html" style="font-size: x-large;"> Gå till andrasidan här!</a></p>
