--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<nav>
    <pre>
-   <a href= "index.html" style="color: white;">hemsidan</a>
-   <a href= "andrasidan.html" style="color: white;">sida 2</a>
-   <a href="tredjesidan.html">sida 3</a>
-   <a href="fjärdesidan.html">sida 4</a>
+   <a href= "index.html" style="color: white; font-size: x-large;" >hemsidan</a>
+   
+   <a href= "andrasidan.html" style="color: white; font-size: x-large;">sida 2</a>
+   
+   <a href="tredjesidan.html" style="color: white; font-size: x-large;">sida 3</a>
+   
+   <a href="fjärdesidan.html" style="color: white; font-size: x-large;">sida 4</a>
 </pre>
-</nav>
+
 nav{
   width: 100%;
   display: flex;
