nav bar 2.0 official

--- a/andrasidan.html
+++ b/andrasidan.html
@@ -1,3 +1,17 @@
+<style>
+  div {
+    background-color: rgb(0, 0, 0);
+    width: 1050px;
+    height: 50px;
+    border: 15px solid yellow;
+    padding: 50px;
+    margin: 20px;
+  }
+  </style>
+  <div><pre>
+     <a href= "index.html" style="color: white; font-size: x-large;" >hemsidan</a>                           <a href= "andrasidan.html" style="color: white; font-size: x-large;">sida 2</a>                                 <a href="tredjesidan.html" style="color: white; font-size: x-large;">sida 3</a>                              <a href="fjärdesidan.html" style="color: white; font-size: x-large;">sida 4</a>
+  </pre></div>
+
 <center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR!</h1></center>
 <body style="background-color: rgb(0, 0, 0);">
     <audio src="metall.mp3" autoplay></audio>
