--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -1,1 +1,14 @@
+<style>
+    div {
+      background-color: rgb(0, 0, 0);
+      width: 1050px;
+      height: 50px;
+      border: 15px solid yellow;
+      padding: 50px;
+      margin: 20px;
+    }
+    </style>
+    <div><pre>
+       <a href= "index.html" style="color: white; font-size: x-large;" >hemsidan</a>                           <a href= "andrasidan.html" style="color: white; font-size: x-large;">sida 2</a>                                 <a href="tredjesidan.html" style="color: white; font-size: x-large;">sida 3</a>                              <a href="fjärdesidan.html" style="color: white; font-size: x-large;">sida 4</a>
+    </pre></div>
 <h2>sida 4</h2>
