--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -1,3 +1,6 @@
+<body style="background-color: black;">
+    
+
 <style>
     div {
       background-color: rgb(0, 0, 0);
@@ -12,3 +15,4 @@
        <a href= "index.html" style="color: white; font-size: x-large;" >hemsidan</a>                           <a href= "andrasidan.html" style="color: white; font-size: x-large;">sida 2</a>                                 <a href="tredjesidan.html" style="color: white; font-size: x-large;">sida 3</a>                              <a href="fjärdesidan.html" style="color: white; font-size: x-large;">sida 4</a>
     </pre></div>
 <h1>sida 3</h1>
+</body>
