--- a/andrasidan.html
+++ b/andrasidan.html
@@ -14,7 +14,7 @@
 
 <center><h1 style="color: rgb(255, 255, 255); "> VÄLKOMMEN TILL SIDA 2, DÄR DET ROLIGA STARTAR!</h1></center>
 <body style="background-color: rgb(0, 0, 0);">
-    
+   <audio src="metall.mp3"></audio> 
   <center> <p style="background-color: gray; font-weight: bolder;" > Den här websidan inehåller en hel del av roliga aktiviteter som kommer att underhålla dig. <br> Dessa aktiviteter kan vara allt från spel till pussel och kluriga gåtor. <br> Här på Albin LLC så önskar vi er att nöja er med dessa vetenskapligt framtagna hjärnövningar. <br> Ha det så kul! </p></center>
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
