main title font

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 }
-<center> <h1 style="color: yellow;"> det här är världens bästa websida <hr style="color: yellow;">
+<center> <h1 style="color: yellow;"> <i>det här är världens bästa websida</i> <hr style="color: yellow;">
 </h1></center>
 
    <body style="background-color: rgb(0, 0, 0);">
