--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -2,8 +2,9 @@
     
 
 <style>
-    div {
-      background-color: rgb(0, 0, 0);
+    div { 
+     position: sticky;
+    background-color: rgb(0, 0, 0);
       width: 1050px;
       height: 50px;
       border: 15px solid yellow;
@@ -17,6 +18,20 @@
 
 
   <center><h1 style="color: goldenrod; position: relative right: 20px; top: 150px;">REAL MADRID</h1></center>
-<img src="real madrid logo.png" alt="hala madrid" style="position: sticky: right:50px;">
+<img src="real madrid logo.png" alt="hala madrid">
 
+<style>
+    img{
+    position: absolute;
+    top: 200px ;   
+    right: 15px; 
+    height: 500px;
+    width: 300px;
+    }
+</style>
+<p style="color: gold;">Real madrid är en fotbollsklubb som var skapad i Madrid 1902. 
+    Klubben ses som den mest framgångsrika i fotbollens historia med flest <br> titlar vunna av
+     alla klubbar. Real madrid har dominerat världsfotbollen under hela klubbens livslängd.
+    De dominerar i världens största <br>klubblagstävling (Champions League) då de har vunnit de fem första 
+     upplagorna av tävlingen och än idag är regerande mästara. </p>
 </body>
