--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -29,9 +29,32 @@
     width: 300px;
     }
 </style>
+
+<h2 style="color: gold;"><u> Historia och Rivaliteter</u></h2>
+
 <h4 style="color: gold;">Real madrid är en fotbollsklubb som var skapad i Madrid 1902. 
     Klubben ses som den mest framgångsrika i fotbollens historia med flest <br> titlar vunna av
      alla klubbar. Real madrid har dominerat världsfotbollen under hela klubbens livslängd.
     De dominerar i världens största <br>klubblagstävling (Champions League) då de har vunnit de fem första 
-     upplagorna av tävlingen och än idag är regerande mästara. </h4>
+     upplagorna av tävlingen och än idag är regerande mästare. 2024 <br> blev Real Madrid den första klubben 
+    någonsin att omsätta en miljard euros. Eftersom att Real Madrid är en klubb lagd i Madrid som är <br>
+     spaniens största stad så delar de stad med en annan klubb. Klubben heter Atletico madrid och har varit rivaler med real madrid <br>
+enda sen båda klubbarn var skapda. Oavsett rivaliteten så har bägge klubbar delat arena unde olika tidsperioder <br>
+på grund av renovasioner i en av arenorna eller ekonomiska skäl. Oavsett rivaliteten med Atletico madid så finns det en annan <br>
+rivalitet till Real madrid som är mycket större, denna rivalitet är mellan Fc Barcelona och Real Madrid. Många ser denna <br>
+rivalitet som den största i hela världen. När dessa två lag möts så kallas mötet för El Classico (klassikern) då det troligtvis är <br>
+det mest ikoniska mötet inom fotboll. Mötet har en hel del historia då lagen spelar extra fult i detta derbyt till skillnad mot <br>
+andra matcher. </h4>
+<h2 style="color: gold;"><u> Spelare och Övergångar</u></h2>
+
+<h4 style="color: gold;">
+  Eftersom att Real Madrid anses vara den största klubben i fotbollens historia så har klubben haf många kända spelare genom <br>
+  tiderna. Om man går tillbaka till 1940-talet då champions league uppfanns så var det ungefär där som Real madrids första stjärnor <br>
+  började komma fram. De tre första storspelarna i klubben var en trio som dominerade fotbollen och vann då fem champions league på <br> 
+  rad det är fortfarande ingen annan klubb inom fotbollen som har uppnått denna milstolpe. Trion bestog av Fenrec Puskas som var en <br>
+  ungersk anfallare som var snabb och kunde skjuta iväg skott likt raketer mot målet. Gento, en spansk vänsterytter som enda tills nu <br>
+   är den snabbaste spelaren någonsin. Och Alfredo di stefano, en spanskargentinsk högerytter och anfallare som har slagit ett tiotal av <br>
+    målrekord som står kvar i historieböckern än idag. Han är även den ända spelaren någonsin som har vunnit priset Super Ballon`dor. 
+</h4>
+
 </body>
