--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -54,7 +54,10 @@ andra matcher. </h4>
   rad det är fortfarande ingen annan klubb inom fotbollen som har uppnått denna milstolpe. Trion bestog av Fenrec Puskas som var en <br>
   ungersk anfallare som var snabb och kunde skjuta iväg skott likt raketer mot målet. Gento, en spansk vänsterytter som enda tills nu <br>
    är den snabbaste spelaren någonsin. Och Alfredo di stefano, en spanskargentinsk högerytter och anfallare som har slagit ett tiotal av <br>
-    målrekord som står kvar i historieböckern än idag. Han är även den ända spelaren någonsin som har vunnit priset Super Ballon`dor. 
+    målrekord som står kvar i historieböckern än idag. Han är även den ända spelaren någonsin som har vunnit priset Super Ballon`dor. <br>
+    Om går framåt i tidem till 90-talet så påbörjades Real Madrids stjärnperiod. Här kunde man hitta spelare som t.ex <br>
+    Adriano, fernando Hierro, Roberto carlos Clarance Seedorf. Många av dessa spelare har ansets som en av fotbollens bästa genom tiderna <br>
+    baserat på deras nivå som de kan spela på. 
 </h4>
 
 </body>
