--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -38,7 +38,7 @@
     De dominerar i världens största <br>klubblagstävling (Champions League) då de har vunnit de fem första 
      upplagorna av tävlingen och än idag är regerande mästare. 2024 <br> blev Real Madrid den första klubben 
     någonsin att omsätta en miljard euros. Eftersom att Real Madrid är en klubb lagd i Madrid som är <br>
-     spaniens största stad så delar de stad med en annan klubb. Klubben heter Atletico madrid och har varit rivaler med real madrid <br>
+    spaniens största stad så delar de stad med en annan klubb. Klubben heter Atletico madrid och har varit rivaler med real madrid <br>
 enda sen båda klubbarn var skapda. Oavsett rivaliteten så har bägge klubbar delat arena unde olika tidsperioder <br>
 på grund av renovasioner i en av arenorna eller ekonomiska skäl. Oavsett rivaliteten med Atletico madid så finns det en annan <br>
 rivalitet till Real madrid som är mycket större, denna rivalitet är mellan Fc Barcelona och Real Madrid. Många ser denna <br>
@@ -57,7 +57,20 @@ andra matcher. </h4>
     målrekord som står kvar i historieböckern än idag. Han är även den ända spelaren någonsin som har vunnit priset Super Ballon`dor. <br>
     Om går framåt i tidem till 90-talet så påbörjades Real Madrids stjärnperiod. Här kunde man hitta spelare som t.ex <br>
     Adriano, fernando Hierro, Roberto carlos Clarance Seedorf. Många av dessa spelare har ansets som en av fotbollens bästa genom tiderna <br>
-    baserat på deras nivå som de kan spela på. 
-</h4>
+    baserat på deras nivå som de kan spela på. På 00-talet så påbörjade Real Madrid ett projekt kallat "Los Galacticos". Det projektet <br>
+    innebar att klubben skulle värva så många storspelare runt om i världen som möjligt. Detta var för att visa att bara bra spelare <br>
+    spelade för Real Madrid. Spelarna som värvades var Zinedine Zidane, Troligtvis fotbollens bästa mittfältare genom alla tider. Han är en av  <br>
+    få mittfältare fom faktiskt har vunnit ballon'dor (utmärkelsen för världens bästa spelare). En till spelare som värvades var David Beckham <br>
+    som värvades från Manchester United och är en engelsk högermitt som kan spela både på kanten och inne i mittfältet. Han är dock mest känd för sinna <br>
+    frisparkar, i det området så beräknas han vara en av de bästa i fotbollen. Den tredje spelaren som värvades under galacticos-tiden var Ronaldo Nazario De Lima, <br> 
+    han är en brasiliansk anfallare som anses som en av fotbollens bästa spelare genom alla tider. Han har vunnit Ballon'dor två gånger och vunnit Vm två gånger med brasilien. <br>
+    Ronaldo hade tidigare spelat för Ac milan, Inter, PSV och barcelona. Han var en älskad spelare i alla klubbar han var i. oacsett rivaliteter så älskades han av alla fotbollsfans. <br>
+    Oavsett hans otroliga karriär så var han en väldigt skadedrabbad spelare med stora knäproblem. I sin största skada så behövde han ta en paus från fotbollen och återhämta sig i <br>
+    två år. Ännu en spelare som blev upköpt av Real Madrid var Luis Figo, han var en portugisisk högerytter som anses vara en av portugals bästa spelare genom tiderna. <br>
+    Den sista galacticos-spelaren som värvades var Fabio Cannavaro, han var en italiensk mittback som tidigare hade spelat i Juventus. Cannavaro anses vara en av de bästa någonsin i sin <br>
+    position, den största anledningen är att han är en av två mittbackar att någonses bli prisad med Ballon'dor.  
+     
 
+
+</h4>
 </body>
