--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -67,7 +67,7 @@ andra matcher. </h4>
     Ronaldo hade tidigare spelat för Ac milan, Inter, PSV och barcelona. Han var en älskad spelare i alla klubbar han var i. oacsett rivaliteter så älskades han av alla fotbollsfans. <br>
     Oavsett hans otroliga karriär så var han en väldigt skadedrabbad spelare med stora knäproblem. I sin största skada så behövde han ta en paus från fotbollen och återhämta sig i <br>
     två år. Ännu en spelare som blev upköpt av Real Madrid var Luis Figo, han var en portugisisk högerytter som anses vara en av portugals bästa spelare genom tiderna. <br>
-    Den sista galacticos-spelaren som värvades var Fabio Cannavaro, han var en italiensk mittback som tidigare hade spelat i Juventus. Cannavaro anses vara en av de bästa någonsin i sin position, den största anledningen är att han är en av två mittbackar att någonses bli prisad med Ballon'dor.  
+    Den sista galacticos-spelaren som värvades var Fabio Cannavaro, han var en italiensk mittback som tidigare hade spelat i Juventus. Cannavaro anses vara en av de bästa någonsin i sin position. den största anledningen är att han är en av två mittbackar att någonses bli prisad med Ballon'dor.  
      
 
 
