--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -67,9 +67,29 @@ andra matcher. </h4>
     Ronaldo hade tidigare spelat för Ac milan, Inter, PSV och barcelona. Han var en älskad spelare i alla klubbar han var i. oacsett rivaliteter så älskades han av alla fotbollsfans. <br>
     Oavsett hans otroliga karriär så var han en väldigt skadedrabbad spelare med stora knäproblem. I sin största skada så behövde han ta en paus från fotbollen och återhämta sig i <br>
     två år. Ännu en spelare som blev upköpt av Real Madrid var Luis Figo, han var en portugisisk högerytter som anses vara en av portugals bästa spelare genom tiderna. <br>
-    Den sista galacticos-spelaren som värvades var Fabio Cannavaro, han var en italiensk mittback som tidigare hade spelat i Juventus. Cannavaro anses vara en av de bästa någonsin i sin position. den största anledningen är att han är en av två mittbackar att någonses bli prisad med Ballon'dor.  
+    Den sista galacticos-spelaren som värvades var Fabio Cannavaro, han var en italiensk mittback som tidigare hade spelat i Juventus. Cannavaro anses vara en av de bästa någonsin i sin position. den största anledningen är att han är en av två mittbackar att någonses bli prisad med Ballon'dor. <br>
+    På 2010-talet så värvades det mest talanger som hade bevisat sig själva i andra ligor exempel på dessa spelare kan vara Luka modric <br>
+    ,gareth Bale och sergio ramos. Men den största var Cristiano Ronaldo, en 24 åring som hade ddominerat den svåraste ligan Premier League. <br>
+    Ronaldos Manchester United hade vunnit Champions League året innan han köptes Av madrid. Cristiano blev därefter den bästa spelaren i fotbollens historia <br>
+    med 5 ballon'dors och 5 champions leagues. 2010-talet blev en av real madrids mest framgångsrika tidsperioder med tre champions league på rad och många <br>
+    andra titlar som ligan och ligacupen. Under 2020-talet så värvades det väldigt unga talanger från bland annat den brasilianska liggan. spelare som värvades från brasilien <br>
+    var t.ex vini.jr, rodrygo och endrick. Andra värvningar bestod av antonio rudiger, en tysk mittback som tidigare hade dominerat backlinjer i både roma och <br>
+    chelsea. En annan stor värvning var Jude bellingham, en engelsk mittback från burussia dortmund. Jude bellingham är real madrids dyraste värvning i historien med 200 miljoner euros.
+    Den största och nyarste värvningen på 2020-talet för real madrid måste ges till kylian Mbappe. han har länge varit högt uppe på madrids önskelista. <br>
+    Det som gör övergången ännu bättre är att mbappe värvades gratis istället för den dyra summan pengar han är värd. <br>
      
-
-
+     
 </h4>
+<h2 style="color: gold;"><i> Real madrids bedrifter</i></h2>
+<ul>
+
+  <li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+
+</ul>
+
+  
 </body>
