--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -78,18 +78,38 @@ andra matcher. </h4>
     Den största och nyarste värvningen på 2020-talet för real madrid måste ges till kylian Mbappe. han har länge varit högt uppe på madrids önskelista. <br>
     Det som gör övergången ännu bättre är att mbappe värvades gratis istället för den dyra summan pengar han är värd. <br>
      
-     
+ 
 </h4>
-<h2 style="color: gold;"><i> Real madrids bedrifter</i></h2>
-<ul>
 
-  <li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
 
-</ul>
+<h3 style="color: gold;"><i> <u>Real madrids bedrifter:</u></i></h3>
+<style>
+h3{
+position: absolute;
+right: 50px;
+
+}
+
+</style>
+<ul style="color: gold;">
+  <li>15 Champions League</li>
+  <li>36 Laliga</li>
+  <li>20 Copa Del Rey</li>
+  <li>13 Supercopa De Espana</li>
+  <li>5 Club World Cup</li>
+</ul>  
+
+ 
+<style>
+ul{
+  position: absolute;
+  right: 50px;
+  top: 1200px;
+
+}
+ 
+</style>
+
 
   
 </body>
