--- a/andrasidan.html
+++ b/andrasidan.html
@@ -25,9 +25,7 @@
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
-<iframe src="https://unknow-since.github.io/" height="500" width="500" title="Theodors websida" style="background-color: white;"></iframe>
-<p><a href="https://unknow-since.github.io/" style="position: absolute; left: 50px; 
-font-size: xx-large; background-color: white;" > Theodors sida</a></p>
 
+<center> <div style="height: 400px; width: 200px; background-color: rgb(31, 119, 251); border-color: gray; border-radius: 50px;"> <button type="button" style="background-color: red; width: 50px; height: 50px; border-radius: 15px; font-size: x-large;">⚽</button> <br> <br><button type="button" style="width: 50px; height: 50px; background-color: yellow; font-size: x-large; border-radius: 15px;" >🗿</button></div></center>
 
 </body>
