--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -28,9 +28,11 @@
     <input type="text" skola="Skola" id="skola">
 
 
-    <input type="button" value="Skicka in svar" onclick="">
+    <input type="button" value="Skicka in svar">
+
+   
+
 </pre>
 </form>
-    
 </body>
     
