--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    </pre></div>
 
 
-}
+
 <center> <h1 style="color: yellow;"> <i>det här är världens bästa websida</i> <hr style="color: yellow;">
 </h1></center>
 
@@ -25,7 +25,8 @@
  <center> <button type="button" onclick="alert('hallå där!')" style="border: 5px; background-color: yellow; width: 65px;;">tryck på mig!</button></center>
  <hr style="color: yellow;">
  
-
+ <p><a href="https://unknow-since.github.io/" style="position: absolute; left: 50px; 
+font-size: xx-large; background-color: white;" > Theodors sida</a></p>
 
 
 </body>
