game 1 texte nytt skizz

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
  <center> <button type="button" onclick="alert('hallå där!')" style="border: 5px; background-color: yellow; width: 65px;;">tryck på mig!</button></center>
  <hr style="color: yellow;">
  
- <p><a href="https://unknow-since.github.io/" style="position: absolute; left: 50px; 
-font-size: xx-large; background-color: white;" > Theodors sida</a></p>
+ 
 
-
+<a href="https://unknow-since.github.io/ " style="font-size: x-small; color: red;">Theodors websida</a>
 </body>
 
