--- a/andrasidan.html
+++ b/andrasidan.html
@@ -26,6 +26,6 @@
 <img src="party_blob.gif" alt="blobben bob">
 <img src="party_blob.gif" alt="blobben bob">
 
-<center> <div style="height: 400px; width: 200px; background-color: rgb(31, 119, 251); border-color: gray; border-radius: 50px;"> <a href="spel1.html"> <button type="button" style="background-color: red; width: 50px; height: 50px; border-radius: 15px; font-size: x-large;">⚽</button> </a> <br> <br> <a href="spel2.html"><button type="button" style="width: 50px; height: 50px; background-color: yellow; font-size: x-large; border-radius: 15px;" >🗿</button> </a></div></center>
+<center> <div style="height: 400px; width: 200px; background-color: rgb(31, 119, 251); border-color: gray; border-radius: 50px;"> <a href="recreate-html1.html"> <button type="button" style="background-color: red; width: 50px; height: 50px; border-radius: 15px; font-size: x-large;">⚽</button> </a> <br> <br> <a href="recreate-html2.html"><button type="button" style="width: 50px; height: 50px; background-color: yellow; font-size: x-large; border-radius: 15px;" >🗿</button> </a></div></center>
 
 </body>
