--- a/recreate-html2.html
+++ b/recreate-html2.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+
+
 <body>
     <center><h1 style="background-color: red;"> En sida</h1></center>
 <p>Här är en matematisk formel x<sup>2</sup>+y<sup>2</sup>=r <sup>2</sup></p>
@@ -34,3 +44,4 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 allowfullscreen></iframe>
 
 </body>
+</html>
