--- a/recreate-html1.html
+++ b/recreate-html1.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
 <body style="background-color: lightsteelblue;">
     <center> <h1>Min Sida</h1></center>
     <center><p>Detta är min sida. Sidan du tittar på är min.</p></center>
