new color recreate 1

--- a/recreate-html1.html
+++ b/recreate-html1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-color: lightsteelblue;">
+<body style="background-color:  rgb(230,230,241)">
     <center> <h1>Min Sida</h1></center>
     <center><p>Detta är min sida. Sidan du tittar på är min.</p></center>
 <center><p>Här är min favoritdikt:</p></center>
