--- a/recreate-html1.html
+++ b/recreate-html1.html
@@ -10,7 +10,10 @@
     <center> <h1>Min Sida</h1></center>
     <center><p>Detta är min sida. Sidan du tittar på är min.</p></center>
 <center><p>Här är min favoritdikt:</p></center>
-<center><p> Pixlar dansar på en skärm så klar, <br> HTML ger sidan dess form och grund. <br> CSS gör den stilren och underbar, <br> Javascript låter den ändras i stund.</p></center>
+<center><pre><p> Pixlar dansar på en skärm så klar,
+     HTML ger sidan dess form och grund.
+      CSS gör den stilren och underbar, 
+     Javascript låter den ändras i stund.</p></pre</center>
 <center><p>här är min favoritbild:</p></center>
 <center> <img src="last html.png" alt="html logga" style="height: 250px; width: 250px;"></center>
 <center><p>Här är min favoritlista:</p></center>
