--- a/recreate-html1.html
+++ b/recreate-html1.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
 
 <body style="background-color:  rgb(230,230,241)">
     <center> <h1>Min Sida</h1></center>
     <center><p>Detta är min sida. Sidan du tittar på är min.</p></center>
-<center><p>Här är min favoritdikt:</p></center>
-<center><pre><p> Pixlar dansar på en skärm så klar,
+<center> <pre><p>Här är min favoritdikt:</p></center>
+<center><p> Pixlar dansar på en skärm så klar,
      HTML ger sidan dess form och grund.
       CSS gör den stilren och underbar, 
-     Javascript låter den ändras i stund.</p></pre</center>
+     Javascript låter den ändras i stund.</p></pre></center>
 <center><p>här är min favoritbild:</p></center>
 <center> <img src="last html.png" alt="html logga" style="height: 250px; width: 250px;"></center>
 <center><p>Här är min favoritlista:</p></center>
@@ -24,9 +18,9 @@
 <li>Snabbt internet</li>
 <li>Smarta funktioner i kodeditorn</li>
 <ol>
-    <li>Automatisk färgkodning av HTML, CSS och Javascript</li>
-    <li>Funktion för att snabbt hitta och ersätta text</li>
-    <li>Möjlighet att test koden direkt i webbläsaren</li>
+<li>Automatisk färgkodning av HTML, CSS och Javascript</li>
+<li>Funktion för att snabbt hitta och ersätta text</li>
+ <li>Möjlighet att test koden direkt i webbläsaren</li>
 </ol>
 <li>När allt funkar på första försöket</li>
 </ol>
