--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -15,7 +15,7 @@
        <a href= "index.html" style="color: white; font-size: x-large;" >hemsidan</a>                           <a href= "andrasidan.html" style="color: white; font-size: x-large;">sida 2</a>                                 <a href="tredjesidan.html" style="color: white; font-size: x-large;">sida 3</a>                              <a href="fjärdesidan.html" style="color: white; font-size: x-large;">sida 4</a>
     </pre></div>
 <h2>sida 4</h2>
-<img src="cutie.jpg" alt="gullig man" style="position:absolute; right: 5%; border: 5px solid red;">
+<img src="cutie.jpg" alt="gullig man" style="position:absolute; right: 5%; border: 5px solid red;" width="500px" height="1500px">
 <form action="index.html" method="get">
     <pre>
     <label for="namn" style="color: white;">Namn:</label>
@@ -33,7 +33,12 @@
     <label for="fil" style="color: white;">Lägg till en fil här:</label>
     <input type="file" id="fil" name="fil">
 
-   
+   <label for="välj" style="color: white;">Vilken sport är bäst?</label>
+   <input type="checkbox" id="välj"> ⚽
+   <input type="checkbox"> 🏀
+   <input type="checkbox"> 🏒🏳️‍🌈
+   <input type="checkbox"> 🎾
+   <input type="checkbox"> 🥊
   
     
     <input type="submit" value="Skicka in svar">
