--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -16,7 +16,7 @@
     </pre></div>
 <h2>sida 4</h2>
 <img src="cutie.jpg" alt="gullig man" style="position:absolute; right: 5%; border: 5px solid red;" width="500px" height="1500px">
-<form action="index.html" method="get">
+<form action="index.html" method="post">
     <pre>
     <label for="namn" style="color: white;">Namn:</label>
     <input type="text" name="name" id="name">
