--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -16,7 +16,7 @@
     </pre></div>
 <h2>sida 4</h2>
 <img src="cutie.jpg" alt="gullig man" style="position:absolute; right: 5%; border: 5px solid red;" width="500px" height="1500px">
-<form action="index.html" method="get">
+<form action="https://webhook.site/a5ca6826-3da7-42d4-8992-a76af001efbc" method="get">
     <pre>
     <label for="namn" style="color: white;">Namn:</label>
     <input type="text" name="name" id="name">
@@ -39,6 +39,14 @@
    <input type="checkbox"> 🏒🏳️‍🌈
    <input type="checkbox"> 🎾
    <input type="checkbox"> 🥊
+<div style="border: 3px solid gold; background-color: white; width: 100px; height: 100px; align-items: center; justify-content: center;">
+   <label for="a">välj en</label>
+   <input type="radio" id="a" name="a"> a
+   <input type="radio"> b
+   <input type="radio"> c
+  <p>○ a</p>
+  </div>
+
   
     
     <input type="submit" value="Skicka in svar">
