--- a/tredjesidan.html
+++ b/tredjesidan.html
@@ -1,5 +1,5 @@
 <body style="background-color: black;">
-    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">.
 
 <style>
     div { 
