--- a/1.html
+++ b/1.html
@@ -1,5 +1,45 @@
-<body style="background-color: blue;">
-    <center><h1 style="font-size: xx-large;"> <i> Välkommen till <b> världens</b> svåraste pussel</i></h1></center>
-<hr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/mystyle.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1 class="hh" style="text-align: center;">Cristerno Rondalo</h1>
+
+
+
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f0f0f0;
+        margin: 0;
+    }
+
+    .spinner {
+        width: 200px; /* Adjust the size of the image */
+        height: 200px; /* Adjust the size of the image */
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+</style>
+</head>
+<body>
+
+<img class="spinner" src="cr7 bad.jpg" alt="Spinning Image">
 
 </body>
+
+
+</body>
+</html>
