--- a/fjärdesidan.html
+++ b/fjärdesidan.html
@@ -39,12 +39,13 @@
    <input type="checkbox"> 🏒🏳️‍🌈
    <input type="checkbox"> 🎾
    <input type="checkbox"> 🥊
-<div style="border: 3px solid gold; background-color: white; width: 100px; height: 100px; align-items: center; justify-content: center;">
-   <label for="a">välj en</label>
-   <input type="radio" id="a" name="a"> a
-   <input type="radio"> b
-   <input type="radio"> c
-  <p>○ a</p>
+<div style="border: 3px solid gold; background-color: white; width: 100px; height: 100px; align-items: center; justify-content: center; ;">
+  
+  <label for="a">välj en</label>
+   <u><input type="radio" id="a" name="a">a </u >
+<a href="andrasidan.html">◯ b</a >
+<u><input type="radio"> c </u>
+  <p>◯ a</p>
   </div>
 
   
