--- a/2.html
+++ b/2.html
@@ -1,4 +1,34 @@
-<body style="background-color: lime;">
-  <h1> det här är spel 2</h1>
-    <iframe src="" frameborder="0"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spinning Image Animation</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+        }
+
+        .spinner {
+            width: 200px; /* Adjust the size of the image */
+            height: 200px; /* Adjust the size of the image */
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
+</head>
+<body>
+
+    <img class="spinner" src="https://via.placeholder.com/200" alt="Spinning Image">
+
 </body>
+</html>
