--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
          <div class="Urubrik"><h1>Populärt just nu</h1> <hr></div>
        <img src="images/man u 2008 shirt.png" alt="man u 08" class="img1">
         <img src="images/real madrid shirt.webp" alt="rm" class="img2">
-        <div class="img1tx"><h2>Manchester United 07/08</h2></div>
-        <div class="img2tx"><h2>Real madrid 23/24</h2></div>
+        <div class="img1tx"><h2>Manchester United 07/08</h2><button class="button3">Köp</button></div>
+        <div class="img2tx"><h2>Real madrid 23/24</h2><button class="button3">Köp</button></div>
         <img src="images/brasil2.0.jpg" alt="brazil" class="img3">
         <img src="images/milan 07.webp" alt="milan" class="img4">
         <div class="img3tx"><h2>Brasilien 2002</h2> <button class="button3">Köp</button></div>
-        <div class="img4tx"><h2>AC Milan 06/07</h2></div>
+        <div class="img4tx"><h2>AC Milan 06/07</h2><button class="button3">Köp</button></div>
         
         <div class="footer">
         </div>
